<resources>
    <string name="app_name">Acalculator</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="dot">.</string>
    <string name="clear"><![CDATA[<]]></string>
    <string name="hist">Hist.</string>
    <string name="lt"><![CDATA[<]]></string>
    <string name="subtract">-</string>

    <!--Drawer-->
    <string name="calculator">Calculatora</string>
    <string name="history">Histórico</string>
    <string name="other">Outros</string>
    <string name="sign_out">Sair</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
