<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_visor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:padding="16dp"
        android:textSize="40sp"
        android:text="@string/_0"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_clearAll"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="C"
            android:textColor="@android:color/white"
            android:background="@android:color/darker_gray"
            />
        <Button
            android:id="@+id/button_clear"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/clear"
            />
        <Button
            android:id="@+id/button_hist"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hist"
            />
        <Button
            android:id="@+id/button_multiply"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="*"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_7"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="7"
            />
        <Button
            android:id="@+id/button_8"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="8"
            />
        <Button
            android:id="@+id/button_9"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="9"
            />
        <Button
            android:id="@+id/button_divide"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="/"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_4"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="4"
            />
        <Button
            android:id="@+id/button_5"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="5"
            />
        <Button
            android:id="@+id/button_6"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="6"
            />
        <Button
            android:id="@+id/button_subtract"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="-"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/_1"
            />
        <Button
            android:id="@+id/button_2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/_2"
            />
        <Button
            android:id="@+id/button_3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/_3"
            />
        <Button
            android:id="@+id/button_adition"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="+"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_0"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/_0"
            />
        <Button
            android:id="@+id/button_dot"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/dot"
            />
        <Button
            android:id="@+id/button_equals"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="="
            />
    </LinearLayout>

</LinearLayout>



